--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://SRI421.github.io/wucskkm",
+  "homepage": "https://SRI421.github.io",
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,11 +13,13 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
+    "react-pdf": "^10.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
