--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.7",
+    "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
     "pdfjs-dist": "^3.11.174",
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-pdf": "^10.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
